1998-01-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.lib ($(INCFILE)):  Fix typo.

1998-01-05  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.lib ($(INCFILE), $(INCINSTALLED)): For installing
	headers, delete before copying.

	* Makefile.conf: Add SWARMCOMPILER conditional between egcs and gcc27.
	Use tcl7.6/tk4.2/blt2.3 in former case, and tcl7.4/tk4.0/blt2.1
	in latter case.  Remove INSTALLHEADERS.

1997-12-22  Alex Lancaster  <alex@wijiji.santafe.edu>

	* Makefile.conf: Added alex-SFI-GNU/Linux config for ThinkPad
	laptop.

	* Makefile.conf: Upgraded alex-SFI-Solaris to use tcl7.6 and tk4.2.

1997-12-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (TMPDIR): Define TMPDIR to be SWARMTMPDIR if
	that variable has a nonempty value.  Use TMPDIR in place of
	/tmp literals for SRCDIST and BINDIST.

1997-12-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (dist): Use comma instead of slash as delimiter in
	sed expression.

	* Makefile.conf (CC): Use explicit path for SFI configuration.
	Add gcc28 subconfig for mgd-PSU-Irix5 with two different tclobjcs.
	Likewise for mgd-PSU-GNU/Linux-glibc2. 
	Quote CC argument for .h.xm
	Update Irix 5.3 config to use prefix variables for Tcl and Tk.
	
	* Makefile (dist): Don't match SETUP to the $(SWARMSETUP) case.

	* Makefile.conf (TCLVERS): Upgrade mgd-SFI-Solaris to Tcl 7.6.
	(TKVERS): Upgrade mgd-SFI-Solaris to Tk 4.2.
	(OPTFLAGS): Disable -mv8 in mgd-SFI-Solaris/generic gcc config
	so it can be used for making distributions.

	* Makefile (SWARMDIST): Set to swarm-1.0.4.

1997-12-16  Marcus G. Daniels  <mgd@swarm.santafe.edu>

	* Makefile.conf:  Modify mgd-SFI-GNU/Linux to use prefix vars
	and egcs.

1997-12-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf: Change umich's Tcl, Tk, and TclObjc paths
	from $(HOME) prefixes to /usr/local.

1997-12-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf: Use $(origin CC) to see if the value of CC is the