@@ -46,20 +46,25 @@ ifeq ($(SETUP),SFI)
 SYS=solaris
 ### the following 7 variables are needed to *make* binary distributions
 CC=/opt/gnu/bin/gcc
-TCLINC=/usr/local/include/tcl7.5
-TKINC=/usr/local/include/tk4.1
-BLTINC=/opt/local/blt/include
-BLTLIB=/opt/local/blt/lib/blt2.1
-XINC=/opt/X11R6/include
-TCLOBJCINC=/net/user/swarm/support-swarm/libtclobjc-1.1b7
+TCLVERS=7.6
+TKVERS=4.2
+TCLINC=/usr/local/include/tcl$(TCLVERS)
+TKINC=/usr/local/include/tk$(TKVERS)
+BLTPREFIX=/usr/local/blt2.3
+BLTINC=$(BLTPREFIX)/include
+BLTLIB=$(BLTPREFIX)/lib
+XINC=/opt/X11R6/include 
+TCLOBJPREFIX=/usr/local 
+TCLOBJINC=$(TCLOBJPREFIX)/include
+TCLOBJINC=$(TCLOBJPREFIX)/lib
+#TCLOBJCINC=/net/user/swarm/support-swarm/libtclobjc-1.1b7
 #TCLOBJCINC=/net/user/gepr/Swarm/1.0.3/libtclobjc-1.1b6+
-TCLLIB=/usr/local/lib/tcl7.5
-TKLIB=/usr/local/lib/tk4.1
-TCLVERS=7.5
-TKVERS=4.1
+TCLLIB=/usr/local/lib/tcl$(TCLVERS)
+TKLIB=/usr/local/lib/tk$(TKVERS)
 
 OTHERINCDIRS=-I$(TCLOBJCINC) -I$(BLTINC) -I$(TCLINC) -I$(TKINC) -I$(XINC) -I/opt/local/include
-OTHERLIBDIRS=-L/opt/X11R6/lib -L/opt/local/blt/lib -L/opt/local/lib -L$(TCLOBJCINC)
+OTHERLIBDIRS=-L/opt/X11R6/lib -L$(BLTLIB) -L/opt/local/lib -L$(TCLOBJCLIB) -L/opt/gnu/lib
+OTHERLIBS=# -lreadline -ltermcap
 endif
 
 ifeq ($(SETUP),alex-SFI-Solaris)
@@ -141,13 +146,13 @@ ifeq ($(SWARMCOMPILER),gcc28)
 CC=$(P)/development/gcc/bin/gcc
 OPTFLAGS=-mcpu=ultrasparc -O3 -g
 override EXTRACFLAGS+=-Werror -Wno-implicit-int
-TCLOBJCPREFIX=$(P)/swarm/tclobjc-new
+TCLOBJCPREFIX=$(P)/swarm/tclobjc-gcc28
 else
 ifeq ($(SWARMCOMPILER),egcs)
 CC=$(P)/development/egcs/bin/gcc
 OPTFLAGS=-mcpu=ultrasparc -O3 -g
 override EXTRACFLAGS+=-Werror -Wno-implicit
-TCLOBJCPREFIX=$(P)/swarm/tclobjc-new
+TCLOBJCPREFIX=$(P)/swarm/tclobjc-egcs
 else
 CC=/opt/gnu/bin/gcc
 OPTFLAGS=-O3 -g # -mv8
